fixed alignment issues

--- a/Client/src/Pages/home.css
+++ b/Client/src/Pages/home.css
@@ -50,3 +50,10 @@ h2 {
 .calendar {
   text-align: center;
 }
+
+.container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-around;
+}
